fix: spacing and active button outline

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -77,7 +77,7 @@ body > #root {
 
 .app-header {
 	font-size: 4rem;
-	padding-bottom: 6rem;
+	padding-bottom: 3rem;
 }
 
 .accent {
@@ -108,9 +108,16 @@ body > #root {
 	width: 2.5rem;
 	height: 2.5rem;
 	background-color: transparent;
+	border-radius: 50%;
 	color: #4285f4;
 	cursor: pointer;
+	outline: none;
 	z-index: 1;
+}
+
+.search-icon-btn:active {
+	background-color: rgba(144, 202, 249, 0.3);
+	outline: none;
 }
 
 .video-window {
@@ -138,7 +145,7 @@ body > #root {
 	display: block;
 	width: 100%;
 	margin: .5rem auto;
-	padding: .75rem 3rem 0.75rem 1.5rem;
+	padding: .5rem 3rem 0.5rem 1.5rem;
 }
 
 .action-btn {
